# terratest-bazel

./: BUILD  Makefile  WORKSPACE  go.mod  go.sum  kubeconfig.bzl
.circleci/: bazel.rc  config.yml
.github/workflows/: main.yml  testing-bazel.yml
example-test/: BUILD.bazel  example_test.go
